--- a/smime/standalone/standalone_EDWARDS_dual-key.htm
+++ b/smime/standalone/standalone_EDWARDS_dual-key.htm
@@ -81,7 +81,7 @@
 			<tr><td rowspan="2">Validity</td><td>Not Before</td><td>...</td><td></td></tr>
 			<tr><td>Not After</td><td>...</td><td></td></tr>
 			<tr><td><b>Subject DN</b></td><td>NULL SEQUENCE (NULL-DN)</td><td>SEQUENCE {}</td><td></td></tr>
-			<tr><td>Subject Public Key Info</td><td>Public Key Algorithm and ECDH Public-Key</td><td>X25519 and X25519</td><td></td></tr>
+			<tr><td>Subject Public Key Info</td><td>Public Key Algorithm and EdDH Public-Key</td><td>X25519 and X25519</td><td></td></tr>
 			<tr><td rowspan="6">X509v3 extensions</td><td>Basic Constraints</td><td>CA:FALSE</td><td>critical</td></tr>
 			<tr><td>Key Usage</td><td>keyAgreement</td><td>critical</td></tr>
 			<tr><td>Extended Key Usage</td><td>emailProtection</td><td></td></tr>
